adding of the deposit by hash for recipients with CLI
