# pkg/grpc_server/store_vault_server/h_get_backup_deposit_by_hash.go
@@ -6,7 +6,7 @@ import (
 	"fmt"
 	"intmax2-node/internal/open_telemetry"
 	node "intmax2-node/internal/pb/gen/store_vault_service/node"
-	getBackupTransactionByHash "intmax2-node/internal/use_cases/get_backup_transaction_by_hash"
+	getBackupDepositByHash "intmax2-node/internal/use_cases/get_backup_deposit_by_hash"
 	"intmax2-node/pkg/grpc_server/utils"
 	errorsDB "intmax2-node/pkg/sql_db/errors"
 
@@ -14,14 +14,14 @@ import (
 	"go.opentelemetry.io/otel/trace"
 )
 
-func (s *StoreVaultServer) GetBackupTransactionByHash(
+func (s *StoreVaultServer) GetBackupDepositByHash(
 	ctx context.Context,
-	req *node.GetBackupTransactionByHashRequest,
-) (*node.GetBackupTransactionByHashResponse, error) {
-	resp := node.GetBackupTransactionByHashResponse{}
+	req *node.GetBackupDepositByHashRequest,
+) (*node.GetBackupDepositByHashResponse, error) {
+	resp := node.GetBackupDepositByHashResponse{}
 
 	const (
-		hName      = "Handler GetBackupTransactionByHash"
+		hName      = "Handler GetBackupDepositByHash"
 		requestKey = "request"
 	)
 
@@ -31,9 +31,9 @@ func (s *StoreVaultServer) GetBackupTransactionByHash(
 		))
 	defer span.End()
 
-	input := getBackupTransactionByHash.UCGetBackupTransactionByHashInput{
-		Sender: req.Sender,
-		TxHash: req.TxHash,
+	input := getBackupDepositByHash.UCGetBackupDepositByHashInput{
+		Recipient:   req.Recipient,
+		DepositHash: req.DepositHash,
 	}
 
 	err := input.Valid()
@@ -45,10 +45,10 @@ func (s *StoreVaultServer) GetBackupTransactionByHash(
 	err = s.dbApp.Exec(spanCtx, nil, func(d interface{}, _ interface{}) (err error) {
 		q, _ := d.(SQLDriverApp)
 
-		results, err := s.commands.GetBackupTransactionByHash(s.config, s.log, q).Do(spanCtx, &input)
+		results, err := s.commands.GetBackupDepositByHash(s.config, s.log, q).Do(spanCtx, &input)
 		if err != nil {
 			open_telemetry.MarkSpanError(spanCtx, err)
-			const msg = "failed to get backup transactions: %w"
+			const msg = "failed to get backup deposit: %w"
 			return fmt.Errorf(msg, err)
 		}
 		resp.Data = results
@@ -57,10 +57,10 @@ func (s *StoreVaultServer) GetBackupTransactionByHash(
 	})
 	if err != nil {
 		if errors.Is(err, errorsDB.ErrNotFound) {
-			return &resp, utils.NotFound(spanCtx, fmt.Errorf("%s", getBackupTransactionByHash.NotFoundMessage))
+			return &resp, utils.NotFound(spanCtx, fmt.Errorf("%s", getBackupDepositByHash.NotFoundMessage))
 		}
 
-		const msg = "failed to get backup transactions with DB App: %+v"
+		const msg = "failed to get backup deposit with DB App: %+v"
 		return &resp, utils.Internal(spanCtx, s.log, msg, err)
 	}
 
